# crypto-shorting

./: Readme.MD  btcsideways.csv  crypto_shorting_opti.py  fromtimestamp.py  pyproject.toml  shorting_run.py
